avengers html created - intial content boxes added and styled

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             <a class="nav-link" href="#ltp-modal" data-bs-toggle="modal" data-target="#ltp-modal">How To
                                 Play</a>
-                            <a class="nav-link" href="#">Avengers</a>
+                            <a class="nav-link" href="avengers.html">Avengers</a>
                         </div>
                     </div>
                 </div>
