Avengers Bio text box, img and img boxes styled

--- a/avengers.html
+++ b/avengers.html
@@ -47,25 +47,47 @@
     <section class="container">
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="text-box-lg">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-captainamerica">
 
+                    </div>
                 </div>
             </div>
             <div class="col-12 col-md-9">
                 <div class="text-box-lg">
-
+                    <h2 class="bangers-font">Captain America</h2>
+                    <p>
+                        During the dark days of the early 1940's, a covert U.S. Military experiment turned Steve Rogers
+                        into America's first Super-Soldier, Captain America. Throughout the war, Cap and his partner,
+                        Bucky fought alongside infantry and with a group of heroes known as the Invaders. In the closing
+                        months of World War II, Captain America and Bucky were both presumed dead in an explosion.
+                        Decades later, Captain America was found trapped in ice and revived in the modern world. Captain
+                        America would then later go on to be one of the most important members of the Avengers as well
+                        as a leader of the team.
+                    </p>
                 </div>
             </div>
         </div>
         <div class="row flex-md-row flex-column-reverse align-items-center">
             <div class="col-12 col-md-9">
                 <div class="text-box-lg">
-
+                    <h2 class="bangers-font">Captain America</h2>
+                    <p>
+                        During the dark days of the early 1940's, a covert U.S. Military experiment turned Steve Rogers
+                        into America's first Super-Soldier, Captain America. Throughout the war, Cap and his partner,
+                        Bucky fought alongside infantry and with a group of heroes known as the Invaders. In the closing
+                        months of World War II, Captain America and Bucky were both presumed dead in an explosion.
+                        Decades later, Captain America was found trapped in ice and revived in the modern world. Captain
+                        America would then later go on to be one of the most important members of the Avengers as well
+                        as a leader of the team.
+                    </p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
-                <div class="text-box-lg">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-captainamerica">
 
+                    </div>
                 </div>
             </div>
         </div>
