Ant-man, daredevil and deadpool added to avengers bio page

--- a/avengers.html
+++ b/avengers.html
@@ -71,21 +71,64 @@
         <div class="row flex-md-row flex-column-reverse align-items-center">
             <div class="col-12 col-md-9">
                 <div class="text-box-lg">
-                    <h2 class="bangers-font">Captain America</h2>
+                    <h2 class="bangers-font">Ant-Man</h2>
                     <p>
-                        During the dark days of the early 1940's, a covert U.S. Military experiment turned Steve Rogers
-                        into America's first Super-Soldier, Captain America. Throughout the war, Cap and his partner,
-                        Bucky fought alongside infantry and with a group of heroes known as the Invaders. In the closing
-                        months of World War II, Captain America and Bucky were both presumed dead in an explosion.
-                        Decades later, Captain America was found trapped in ice and revived in the modern world. Captain
-                        America would then later go on to be one of the most important members of the Avengers as well
-                        as a leader of the team.
+                        Ant-Man is a legacy super-hero name, primarily associated with the ability to shrink in size.
+                        The original was Hank Pym; he was a founding member of the Avengers. Scott Lang took the name,
+                        an ex-con who broke into the New Jersey home of Dr. Henry Pym, and stole the Ant-Man's Suit.
+                        Lang has been a member of the Avengers, Fantastic Four and Future Foundation. Eric O'Grady took
+                        the mantle until his death.
                     </p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="img-box img-box-blue">
-                    <div class="avenger-captainamerica">
+                    <div class="avenger-antman">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column align-items-center">
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-daredevil">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Daredevil</h2>
+                    <p>
+                        The son of boxer Battlin' Jack, Matt Murdock grew up in the relative poverty of Hell's Kitchen
+                        with much reverence for his father. 
+                        
+                        As a boy, Matt witnessed a man about to be hit by a truck
+                        and pushed him out of the way but the truck crashed and spilled its cargo of extremely toxic
+                        chemicals into his face. He awoke in the hospital blind from the toxins and learned that his
+                        other senses were amplified and was able to see by a radar-like sense using natural sounds around him, giving him ultimate confidence in his surroundings. He
+                        met a blind martial arts master named Stick, who taught him to hone his senses and trained him
+                        in martial arts.
+
+                        As an adult, he became a lawyer and opened a law firm with Foggy Nelson while secretly taking on
+                        the mantle of Daredevil in order to protect the citizens of Hell's Kitchen
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column-reverse align-items-center">
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Deadpool</h2>
+                    <p>
+                        Wade Wilson was an international assassin who had worked for various governments when he developed an aggressive cancer. In an effort to find a cure, he enrolled in the Weapon X program in Canada, which gave him a healing factor from another member and set him to work for them. When he killed a team member, he was thrown out of the program and was sent to have his abilities removed, where he was experimented on instead. The results of his stay there were a diminished mental state, a healing factor that could not cure his cancer or heal his scars, an infatuation with death, and his freedom to return to for-hire mercenary work. As "The Merc with a Mouth" he set out as Deadpool to kill and have a good time doing it. 
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-deadpool">
 
                     </div>
                 </div>
