groot and hawkeye added to bio page

--- a/avengers.html
+++ b/avengers.html
@@ -134,6 +134,42 @@
                 </div>
             </div>
         </div>
+        <div class="row flex-md-row flex-column align-items-center">
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-groot">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Groot</h2>
+                    <p>
+                        Groot was a Flora colossi from Planet X, the capital of the branch worlds. He did not get along with his fellow saplings, instead preferring the company of the "Maintenance Mammals" who the other saplings treated with prejudice.
+                        Into his adulthood, Groot found himself in Kree space, where he was promptly captured and imprisoned. While in jail, he formed a rapport with Rocket Raccoon and was assigned to a covert ops team led by Starlord.
+                        Groot joined Star-Lord's Guardians of the Galaxy, alongside many of those he had fought against the Phalanx alongside, including Rocket.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column-reverse align-items-center">
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Hawkeye</h2>
+                    <p>
+                        Clinton "Clint" Barton aka Hawkeye is an American skilled marksman, archer, and former special agent of S.H.I.E.L.D. turned member of the Avengers; "Earth's Mightiest Heroes. As a member of the Avengers he always had friction with the team but always returned to fight any threat. Barton was raised in the circus, trained by criminals and grew from a troubled youth into one of the Earth's greatest heroes. Known for his use of a bow and arrow as his primary weapon, his skill is so great that it appears like he never misses. He has worked with Black Widow, whom he developed a strong friendship with. 
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-hawkeye">
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
