hulk and iron man added to bio page

--- a/avengers.html
+++ b/avengers.html
@@ -102,12 +102,13 @@
                     <h2 class="bangers-font">Daredevil</h2>
                     <p>
                         The son of boxer Battlin' Jack, Matt Murdock grew up in the relative poverty of Hell's Kitchen
-                        with much reverence for his father. 
-                        
+                        with much reverence for his father.
+
                         As a boy, Matt witnessed a man about to be hit by a truck
                         and pushed him out of the way but the truck crashed and spilled its cargo of extremely toxic
                         chemicals into his face. He awoke in the hospital blind from the toxins and learned that his
-                        other senses were amplified and was able to see by a radar-like sense using natural sounds around him, giving him ultimate confidence in his surroundings. He
+                        other senses were amplified and was able to see by a radar-like sense using natural sounds
+                        around him, giving him ultimate confidence in his surroundings. He
                         met a blind martial arts master named Stick, who taught him to hone his senses and trained him
                         in martial arts.
 
@@ -122,7 +123,14 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Deadpool</h2>
                     <p>
-                        Wade Wilson was an international assassin who had worked for various governments when he developed an aggressive cancer. In an effort to find a cure, he enrolled in the Weapon X program in Canada, which gave him a healing factor from another member and set him to work for them. When he killed a team member, he was thrown out of the program and was sent to have his abilities removed, where he was experimented on instead. The results of his stay there were a diminished mental state, a healing factor that could not cure his cancer or heal his scars, an infatuation with death, and his freedom to return to for-hire mercenary work. As "The Merc with a Mouth" he set out as Deadpool to kill and have a good time doing it. 
+                        Wade Wilson was an international assassin who had worked for various governments when he
+                        developed an aggressive cancer. In an effort to find a cure, he enrolled in the Weapon X program
+                        in Canada, which gave him a healing factor from another member and set him to work for them.
+                        When he killed a team member, he was thrown out of the program and was sent to have his
+                        abilities removed, where he was experimented on instead. The results of his stay there were a
+                        diminished mental state, a healing factor that could not cure his cancer or heal his scars, an
+                        infatuation with death, and his freedom to return to for-hire mercenary work. As "The Merc with
+                        a Mouth" he set out as Deadpool to kill and have a good time doing it.
                     </p>
                 </div>
             </div>
@@ -146,9 +154,14 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Groot</h2>
                     <p>
-                        Groot was a Flora colossi from Planet X, the capital of the branch worlds. He did not get along with his fellow saplings, instead preferring the company of the "Maintenance Mammals" who the other saplings treated with prejudice.
-                        Into his adulthood, Groot found himself in Kree space, where he was promptly captured and imprisoned. While in jail, he formed a rapport with Rocket Raccoon and was assigned to a covert ops team led by Starlord.
-                        Groot joined Star-Lord's Guardians of the Galaxy, alongside many of those he had fought against the Phalanx alongside, including Rocket.
+                        Groot was a Flora colossi from Planet X, the capital of the branch worlds. He did not get along
+                        with his fellow saplings, instead preferring the company of the "Maintenance Mammals" who the
+                        other saplings treated with prejudice.
+                        Into his adulthood, Groot found himself in Kree space, where he was promptly captured and
+                        imprisoned. While in jail, he formed a rapport with Rocket Raccoon and was assigned to a covert
+                        ops team led by Starlord.
+                        Groot joined Star-Lord's Guardians of the Galaxy, alongside many of those he had fought against
+                        the Phalanx alongside, including Rocket.
                     </p>
                 </div>
             </div>
@@ -158,13 +171,72 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Hawkeye</h2>
                     <p>
-                        Clinton "Clint" Barton aka Hawkeye is an American skilled marksman, archer, and former special agent of S.H.I.E.L.D. turned member of the Avengers; "Earth's Mightiest Heroes. As a member of the Avengers he always had friction with the team but always returned to fight any threat. Barton was raised in the circus, trained by criminals and grew from a troubled youth into one of the Earth's greatest heroes. Known for his use of a bow and arrow as his primary weapon, his skill is so great that it appears like he never misses. He has worked with Black Widow, whom he developed a strong friendship with. 
+                        Clinton "Clint" Barton aka Hawkeye is an American skilled marksman, archer, and former special
+                        agent of S.H.I.E.L.D. turned member of the Avengers; "Earth's Mightiest Heroes. As a member of
+                        the Avengers he always had friction with the team but always returned to fight any threat.
+                        Barton was raised in the circus, trained by criminals and grew from a troubled youth into one of
+                        the Earth's greatest heroes. Known for his use of a bow and arrow as his primary weapon, his
+                        skill is so great that it appears like he never misses. He has worked with Black Widow, whom he
+                        developed a strong friendship with.
                     </p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="img-box img-box-blue">
                     <div class="avenger-hawkeye">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column align-items-center">
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-hulk">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Hulk</h2>
+                    <p>
+                        Bruce Banner was a scientist who was working on a gamma bomb when he noticed teenager Rick Jones
+                        out on the test range. Although he rushed out into the test site and heroically pushed the boy
+                        into the protective trench to save him from the blast, Bruce was exposed to extreme amounts of
+                        gamma radiation that altered his DNA structure due to gamma rays and trauma passed down by his
+                        father and caused him to become a giant green (at first grey) monster of incredible power known
+                        as the Hulk whenever he starts to get angry.
+
+                        With his girlfriend Betty Ross seemingly being the only person able to calm the Hulk back into
+                        Banner, and often being pursued by his nemesis Thunderbolt Ross who is also Betty's Father,
+                        Bruce is often on the run while trying to find a cure for his problem and keep calm as much as
+                        he can while at the same time battling super-villains.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column-reverse align-items-center">
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Iron Man</h2>
+                    <p>
+                        Genius billionaire inventor, industrialist and CEO of Stark Industries Tony Stark was fatally
+                        wounded in a war zone in Afghanistan shortly before being kidnapped by terrorists. Stark built
+                        an armored suit to escape captivity, which doubled as a device to keep his heart beating keeping
+                        him alive. Once he returned to the United States, Stark reinvented himself as the armor-clad
+                        superhero Iron Man.
+
+                        In times when Tony Stark was indisposed, other men have carried on the legacy of Iron Man. Twice
+                        did Tony's best friend Jim Rhodes, and the duty has fallen into the hands of the reformed
+                        villain Victor von Doom. Most recently, the role has been usurped by Tony's adopted brother,
+                        Arno Stark.
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-ironman">
 
                     </div>
                 </div>
