spiderman and thanos added to bio page

--- a/avengers.html
+++ b/avengers.html
@@ -242,6 +242,43 @@
                 </div>
             </div>
         </div>
+        <div class="row flex-md-row flex-column align-items-center">
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-spiderman">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Spider-Man</h2>
+                    <p>
+                        As a result of a radioactive spider bite, high school student Peter Parker developed powers and special abilities similar to that of a spider. After Peter's selfishness indirectly resulted in the death of his beloved Uncle Ben, Peter decided to live up to the motto that "With great power there must also come great responsibility," and thus became the superhero known as Spider-Man.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column-reverse align-items-center">
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Thanos</h2>
+                    <p>
+                        Thanos was one of the last sons of A'Lars, progenitor of the second colony of Eternals on Titan, and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with purple, hide-like skin and a massive body due to being born with the Deviant Syndrome, Thanos was a morose child who became obsessed with the concept of death. Through bionic implementation and long hours of meditation, Thanos augmented his Eternal strengths and powers so that his abilities surpassed those of all other Titanian Eternals.
+
+                        Using science and his unmatched cunning, Thanos created the Infinity Gauntlet, giving him mastery of Soul Gems.
+                        Using the massive power now in his possession,Thanos used the Infinity Gauntlet to remove half of the population of the universe, causing dire consequences with his actions and becoming sworn enemy of Earths Avengers.
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-thanos">
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
